--- a/README
+++ b/README
@@ -79,6 +79,14 @@ Iteration:
 ----------
 (below loops from 0 to 10)
 def temp = 0
+
+general: 
+while <cond> do 
+	?statements
+end
+
+<cond> is same as Conditionals
+
 while temp < 10 do
 	? statements
 	++temp ? need to iterate, or infinite loop
